problem css and js not showing solved

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -7,7 +7,7 @@
     scroll-behavior: smooth;
 }
 .ctnheader {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(/assets/img/background.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../assets/img/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
